# carcara

./: .gitignore  CLAUDE.md  COMPONENTS.md  README.md  build_userobjects.py  component_test_report.md  debug_chunk.py  debug_chunk2.py  debug_empty.py  debug_inflate.py  debug_object_search.py  debug_srid.py  debug_window.py  debug_window2.py  debug_window300.py  decode_02_queries.py  decode_legacy_ghuser.py  deploy.ps1  investigate2.py  investigate3.py  investigate4.py  investigate5.py  investigate_ghuser.py  make_release.py  notes.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
carcara-old/ghuser-metadata/: 01.Modeling.md  04.Dataviz.md
carcara/userobjects/: CRC_BuildingMeshes.ghuser  CRC_CircleToSVG.ghuser  CRC_ColorCalculator.ghuser  CRC_ConnectionString.ghuser  CRC_CreateShapefile.ghuser  CRC_CreateTable.ghuser  CRC_CurveDisplay.ghuser  CRC_FindCorrectionParameters.ghuser  CRC_GeometriesWithSpatialFilter.ghuser  CRC_GeometryEntities.ghuser  CRC_GrasshopperGeometryToWKT.ghuser  CRC_Heatmap.ghuser  CRC_Histogram.ghuser  CRC_IdentifyDuplicatePolylines.ghuser  CRC_LinePlot.ghuser  CRC_NurbsToSVG.ghuser  CRC_OffsetPython.ghuser  CRC_Ping.ghuser  CRC_PointInsidePolygon.ghuser  CRC_PolylineToSVG.ghuser  CRC_QueryColumnNames.ghuser  CRC_QuerySchemaNames.ghuser  CRC_QueryTableNames.ghuser  CRC_QueryValues.ghuser  CRC_RunCommand.ghuser  CRC_RunQuery.ghuser  CRC_SQLComposer.ghuser  CRC_SaveSVG.ghuser  CRC_ScatterPlot.ghuser  CRC_SortByContainer.ghuser  CRC_TextToSVG.ghuser  CRC_ValuesWithSpatialFilter.ghuser  CRC_WKTtoGrasshopperGeometry.ghuser
docs/: current-vs-legacy-component-report.md
grasshopper/installer/: install_carcara.py  install_python_libs.py
implementation/: 00_overview.md  01_dotnet_toolchain.md  02_core_db_npgsql.md  02_smoke_test_component.md  03_core_geometry.md  04_core_rhino_geometry.md  04_db_query.md  05_core_svg.md  05_db_spatial_query.md  06_core_viz.md  06_db_writer.md  07_core_utils.md  07_geometry_wkt.md  08_components_queries.md  08_geometry_offset_mesh.md  09_components_modeling.md  10_components_utilities.md  10_viz.md  11_components_dataviz.md  11_utils.md  12_gha_packaging_release.md  12_odbc_and_completion.md  README.md
implementation-plans/: README.md
implementation-plans/legacy/: 12_odbc_and_completion.md  13-naming-metadata-normalization.md  fixing-plan.md
implementation/legacy/: 00_scaffolding.md  03_db_connection.md  04_db_query.md  05_db_spatial_query.md  09_svg.md  11_utils.md  (+1 more)
specs/: componentizer.md  ghuser-decoding.md  python-execution.md  sdk-components.md
tests/: test_color.py  test_connection.py  test_correction.py  test_dash.py  test_identify_duplicates.py  test_point_inside_polygon.py  test_query.py  test_runquery_runcommand.py  test_sort_by_container.py  test_spatial_query.py  test_sql_composer.py  test_svg.py  test_viz_hist_line.py  test_viz_scatter_heat.py  test_wkt.py  test_writer.py
tools/: build_userobjects.py  decode_ghuser.py  deploy.ps1  make_release.py
(+186 files in other folders)
