[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "carcara"
version = "0.5.0-beta.1"
requires-python = ">=3.11"
dependencies = [
    "psycopg2>=2.9",
    "shapely>=2.0",
    "svgwrite>=1.4",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "python-dotenv",
    "pytest",
    "pythonnet>=3.0",
    "requests",
]

# The package lives inside the deployable folder: carcara/crc_modules/.
# Import name is crc_modules (folder name on sys.path), not carcara.
[tool.setuptools.packages.find]
where = ["carcara"]
include = ["crc_modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# carcara/ is on sys.path so tests can `import crc_modules.*` without install.
pythonpath = ["carcara"]
norecursedirs = ["carcara*", "carcara-old*", "vendor*", "grasshopper*", "dist*", "__pycache__*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
