[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "carcara"
version = "0.5.0-beta.4"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "psycopg2>=2.9",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv",
    "pytest",
    "pythonnet>=3.0",
    "requests",
]

# The package lives inside the deployable folder: release/crc_modules/.
# Import name is crc_modules (folder name on sys.path), not carcara.
[tool.setuptools.packages.find]
where = ["release"]
include = ["crc_modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# release/ is on sys.path so tests can `import crc_modules.*` without install.
pythonpath = ["release"]
norecursedirs = ["release*", "legacy-0.4.0-beta.2*", "vendor*", "build*", "dist*", "__pycache__*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
